--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,10 +8,59 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head></h:head>
+<h:head>
+	<link rel="stylesheet" type="text/css" href="styles/style.css" />
+</h:head>
 
 
 <h:body>
-	<p:inputText />
+	<h:form id="form">
+		<p:panelGrid id="clocking">
+			<f:facet name="header">
+				<p:row>
+					<p:column colspan="2">Clocking</p:column>
+				</p:row>
+				<p:row>
+					<p:column colspan="2">
+						<h:outputText value="Local date time: " />
+						<p:clock pattern="dd.MM.yyyy HH:mm:ss" mode="server"
+							value="#{indexBean.dateTime}" />
+					</p:column>
+				</p:row>
+			</f:facet>
+			<p:row>
+				<p:column>
+					<p:commandButton value="Punch in"
+						styleClass="centeredColumnContent" />
+				</p:column>
+				<p:column>
+					<p:commandButton value="Punch out"
+						styleClass="centeredColumnContent" />
+				</p:column>
+			</p:row>
+		</p:panelGrid>
+
+		<p:panelGrid id="lastActions" columns="2">
+			<f:facet name="header">
+				<p:row>
+					<p:column colspan="2">Last Actions</p:column>
+				</p:row>
+			</f:facet>
+
+
+
+			<h:outputText value="Punch in: " />
+			<h:outputText value="date1" />
+
+
+
+
+			<h:outputText value="Punch out: " />
+			<h:outputText value="date2" />
+
+
+		</p:panelGrid>
+
+	</h:form>
 </h:body>
 </html>
