Now the last 2 actions will be displayed based on the identity of the logged user and some service refactoring

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -35,7 +35,7 @@
 					<p:outputLabel value="Name" />
 				</p:column>
 				<p:column>
-					<p:inputText value="#{loginBean.identity.name}" />
+					<p:inputText value="#{loginBean.identity.username}" />
 				</p:column>
 
 				<p:column>
