Added security for navigation between views based on login session

--- a/src/main/webapp/clocking.xhtml
+++ b/src/main/webapp/clocking.xhtml
@@ -15,6 +15,7 @@
 
 <h:body>
 	<h:form id="topForm">
+		<p:commandButton value="Logout" action="#{clockingBean.logout}" />
 		<p:panelGrid id="clocking">
 			<f:facet name="header">
 				<p:row>
