--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -13,6 +13,7 @@
 </h:head>
 <h:body>
 
+	<ui:include src="/template/header.xhtml" />
 	<div class="center" id="content">
 
 		<p:ajaxStatus onstart="PF('statusDialog').show()"
