--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -8,11 +8,11 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Login</title>
+	<title>Register</title>
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
 </h:head>
 <h:body>
-
+	<ui:include src="/template/header.xhtml" />
 	<div class="center" id="content">
 
 		<p:ajaxStatus onstart="PF('statusDialog').show()"
