--- a/src/main/webapp/clockingHistory.xhtml
+++ b/src/main/webapp/clockingHistory.xhtml
@@ -14,6 +14,7 @@
 
 
 <h:body>
+	<ui:include src="/template/header.xhtml" />
 	<h:form id="topForm">
 		<p:dataTable var="row"
 			value="#{clockingHistoryBean.clockingEntryList}" lazy="false">
@@ -48,5 +49,6 @@
 			</p:column>
 		</p:dataTable>
 	</h:form>
+	<ui:include src="/template/footer.xhtml" />
 </h:body>
 </html>
