UI improvments from login

--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -142,7 +142,7 @@
 				</div>
 				<div class="ui-g-12 ui-lg-6">
 					<p:commandButton value="To Login" class="back-login-btn btn"
-						icon="fa fa-fw fa-user-secret" update="form"
+						icon="fa fa-fw fa-user-secret" immediate="true"
 						action="login.xhtml?faces-redirect=true" />
 				</div>
 			</div>
