--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -31,14 +31,13 @@
 
 			<p:outputLabel value="Login" class="login-title" />
 
-
 			<span class="ui-float-label input-span"> <p:inputText
 					value="#{loginBean.identity.username}" class="input-item" /> <p:outputLabel
 					value="Username" />
 			</span>
 
-			<span class="ui-float-label input-span"> <p:inputText
-					type="password" value="#{loginBean.identity.password}"
+			<span class="ui-float-label input-span" style="margin-bottom: 3rem;">
+				<p:inputText type="password" value="#{loginBean.identity.password}"
 					width="100px" class="input-item" /> <p:outputLabel
 					value="Password" />
 			</span>
